<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refund_value_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_title_height"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/spaces_small"
            android:paddingLeft="@dimen/spaces_medium"
            android:paddingRight="@dimen/spaces_medium"
            android:paddingTop="@dimen/spaces_small"
            android:text="@string/labels_result"
            android:textColor="@color/white"
            android:textSize="@dimen/card_title_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_title"
            android:orientation="horizontal"
            android:padding="@dimen/spaces_medium">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/km_refund_text_view"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labels_km_refund" />

                <TextView
                    android:id="@+id/km_refund_value_text_view"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_refund_text_view"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labels_total_refund" />

                <TextView
                    android:id="@+id/total_refund_value_text_view"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>